# mecagent-test

./: COMPARISON.md  DATASET.md  README.md  baseline_eval.py  cadquery_tokenizer.py  enhanced_eval.py  enhanced_train.py  enhanced_train_offline.py  good_luck.ipynb  improved_simple_eval.py  improved_simple_train.py  model_downloader.py  pyproject.toml  results.csv  scheduler.py  server.py  simple_eval.py  simple_train.py  test_scheduler.py  train_vision_encoder_decoder.py  utils.py  visualize_grid.py
data/: train.jsonl
models/simple/: model.pt
scripts/: download_hf_dataset.py
